Add merge_ota to otatools
Bug: 282189563
Test: manual, m otatools-package, confirm that merga_ota is
    present in otatools.zip
(cherry picked from https://android-review.googlesource.com/q/commit:6d56d45f96cc1f4e45141bfd04cd92551451d3f5)
Merged-In: I40c3866bfb016aa1dec1c6dc2d95c66deb1e61ea
Change-Id: I40c3866bfb016aa1dec1c6dc2d95c66deb1e61ea

--- a/core/Makefile
+++ b/core/Makefile
@@ -5144,6 +5144,7 @@ INTERNAL_OTATOOLS_MODULES := \
   lz4 \
   make_f2fs \
   make_f2fs_casefold \
+  merge_ota \
   merge_target_files \
   minigzip \
   mk_combined_img \
