Add create_brick_ota to otatools.zip
This allows create_brick_ota binary to be used by downloading
otatools.zip from ab, instead of having to build it locally.

Bug: 278925744
Change-Id: I704355b74bc2de7e8d5b881deb01efbee0fdda2a

--- a/core/Makefile
+++ b/core/Makefile
@@ -5122,6 +5122,7 @@ INTERNAL_OTATOOLS_MODULES := \
   check_target_files_signatures \
   check_target_files_vintf \
   checkvintf \
+  create_brick_ota \
   delta_generator \
   e2fsck \
   e2fsdroid \
