Pass system_ext and product dirs to libvintf
Now that we have manifest fragements in system_ext, we need to tell
libvintf about them.

Test: lunch aosp_bramble-userdebug && m
Bug: 218588089
Change-Id: Iae56d3b8c790fa1d12321f8c3446a04a0ea816d5

--- a/core/Makefile
+++ b/core/Makefile
@@ -4893,6 +4893,8 @@ endif
 check_vintf_all_deps += $(vintffm_log)
 $(vintffm_log): $(HOST_OUT_EXECUTABLES)/vintffm $(check_vintf_system_deps)
 	@( $< --check --dirmap /system:$(TARGET_OUT) \
+	  --dirmap /system_ext:$(TARGET_OUT_SYSTEM_EXT) \
+	  --dirmap /product:$(TARGET_OUT_PRODUCT) \
 	  $(VINTF_FRAMEWORK_MANIFEST_FROZEN_DIR) > $@ 2>&1 ) || ( cat $@ && exit 1 )
 
 $(call declare-1p-target,$(vintffm_log))
