Removing --apply-vbmeta for vbmeta_system
Removing since vbmeta rewrite is only needed for root vbmeta

Test: m fastboot_info
Change-Id: Idd07629104b48db0b75b43d73cd59564583819a4

--- a/core/Makefile
+++ b/core/Makefile
@@ -5412,7 +5412,7 @@ ifeq ($(BUILDING_VBMETA_IMAGE),true)
 	$(hide) echo "flash --apply-vbmeta vbmeta" >> $@
 endif
 ifneq (,$(strip $(BOARD_AVB_VBMETA_SYSTEM)))
-	$(hide) echo "flash --apply-vbmeta vbmeta_system" >> $@
+	$(hide) echo "flash vbmeta_system" >> $@
 endif
 ifneq (,$(strip $(BOARD_AVB_VBMETA_VENDOR)))
 	$(hide) echo "flash --apply-vbmeta vbmeta_vendor" >> $@
@@ -5422,7 +5422,7 @@ ifneq ($(INSTALLED_VENDOR_BOOTIMAGE_TARGET),)
 endif
 ifneq (,$(strip $(BOARD_AVB_VBMETA_CUSTOM_PARTITIONS)))
 	$(hide) $(foreach partition,$(BOARD_AVB_VBMETA_CUSTOM_PARTITIONS), \
-	  echo "flash --apply-vbmeta vbmeta_$(partition)" >> $@;)
+	  echo "flash vbmeta_$(partition)" >> $@;)
 endif
 endif # BOARD_AVB_ENABLE
 	$(hide) echo "reboot fastboot" >> $@
