Adding recovery image
adding recovery image to fastboot-info

Test: m fastboot_info
Change-Id: I65cfb4e3953d94455638002a3ccf442c5ad87a9e

--- a/core/Makefile
+++ b/core/Makefile
@@ -5408,6 +5408,9 @@ endif
 ifneq ($(INSTALLED_VENDOR_KERNEL_BOOTIMAGE_TARGET),)
 	$(hide) echo "flash vendor_kernel_boot" >> $@
 endif
+ifneq ($(INSTALLED_RECOVERYIMAGE_TARGET),)
+	$(hide) echo "flash recovery" >> $@
+endif
 ifeq ($(BOARD_USES_PVMFWIMAGE),true)
 	$(hide) echo "flash pvmfw" >> $@
 endif
