Add apexd_host to otatools
It's used by other tools like check_target_files_vintf and
merge_target_files.

Bug: 289274238
Test: m otatools-package # see if otatools.zip has apexd_host
Change-Id: Ie2e939b00846d5f0a5d81b26f39ac11ff08ff383

--- a/core/Makefile
+++ b/core/Makefile
@@ -5296,6 +5296,7 @@ INTERNAL_OTATOOLS_MODULES := \
 
 # Additional tools to unpack and repack the apex file.
 INTERNAL_OTATOOLS_MODULES += \
+  apexd_host \
   apexer \
   apex_compression_tool \
   deapexer \
