aconfig: Add resetAll method to test mode FeatureFlagsImpl
Add resetAll method to test mode FeatureFlagsImpl. This method
is used to reset all the flags values to null. It provides convenient
way to the test tools to reset the flags values.

Bug: 280833463
Test: atest aconfig.test
Change-Id: I4bf1d3ba69ee106ef8d0c1cc62c00bbeca1b72aa

--- a/tools/aconfig/templates/FeatureFlagsImpl.java.template
+++ b/tools/aconfig/templates/FeatureFlagsImpl.java.template
@@ -3,6 +3,7 @@ package {package_name};
 import static java.util.stream.Collectors.toMap;
 
 import java.util.HashMap;
+import java.util.Map;
 import java.util.stream.Stream;
 {{ else}}
 {{ if is_read_write- }}
@@ -34,6 +35,12 @@ public final class FeatureFlagsImpl implements FeatureFlags \{
             throw new IllegalArgumentException("no such flag" + flagName);
         }
         this.mFlagMap.put(flagName, value);
+    }
+
+    public void resetAll() \{
+        for (Map.Entry entry : mFlagMap.entrySet()) \{
+            entry.setValue(null);
+        }
     }
 
     private boolean getFlag(String flagName) \{
